--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 <textarea id="description" cols="80" rows="8" class="form-control" placeholder="¿Cómo lo vas a hacer?"></textarea>
                             </div>
                             <div class="pt-3 d-grid gap-2">
-                                <button type="submit" class="btn btn-dark">
+                                <button id="saveTask" type="submit" class="btn btn-dark">
                                     Recordar
                                 </button>
                             </div>
