--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- LOGO -->
     <svg viewBox="0 0 960 300">
         <symbol id="s-text">
-            <text text-anchor="middle" x="50%" y="80%">Gaboteka</text>
+            <text text-anchor="middle" x="50%" y="80%">GABOTECA</text>
         </symbol>
         <g class = "g-ants">
             <use xlink:href="#s-text" class="text-copy"></use>
@@ -24,64 +24,69 @@
         </g>
     </svg>        
     <!--MainContent-->
-    <div id="presentacion">
-    </div>
     <div class="form-row text-center pt-3">
         <div class="col-12">
-            <a id="botonHome" href="#/"><button type="button" class="btn btn-outline-primary">Home</button></a>
-            <a id="botonTasks" href="#/tasks"><button type="button" class="btn btn-outline-warning">Tareas</button></a>
-            <a id="botonProyectos" href="#/verproyectos"><button type="button" class="btn btn-outline-dark">Ver proyectos</button></a>
+            <p class="text-secondary">Proyecto realizado para el curso de JavaScript en CoderHouse. ¿Qué deseas hacer?</p>
+            <a id="botonHome" href="#/"><button type="button" class="btn btn-outline-primary m-3">Home</button></a>
+            <a id="botonTasks" href="#/tasks"><button type="button" class="btn btn-outline-warning m-3">Tareas</button></a>
+            <a id="botonProyectos" href="#/verproyectos"><button type="button" class="btn btn-outline-dark m-3">Ver proyectos</button></a>
         </div>
     </div>
     <div id="app" class="container">
-        <div class="container bg-light">
-            <h1 class="navbar-brand pt-5">A ver, <span class="text-dark bg-warning">Gabo</span>. ¿Pinta que te ordenes?</h1>
+        <div id="presentacion">
+            <p class="text-center">¡Hola! terricola, en esta aplicación tu podrás aprender a organizarte. En la pestaña <strong>tareas</strong> podrás poner en orden tus obligaciones diarias o dejar también, algún recordatorio. Por otra parte, y como veras, en la pestaña <strong>ver proyectos</strong> tendrás una breve descripción de cuales son los proyectos mas importantes del desarrollador de esta app: <a class="link-ga" href="https://www.linkedin.com/in/gabriel-alberini/"><strong>Gabriel Alberini</strong></a>. Sin nada mas que decir, ¡que la disfrutes! 🚀</p>
         </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <form id="formTask">
-                            <div class="form-group">
-                                <input type="text" id="title" placeholder="¿Qué tenés que hacer?" class="form-control ">
-                            </div>
-                            <div class="form-group pt-3">
-                                <textarea id="description" cols="80" rows="8" style="resize: none;" class="form-control" placeholder="¿Cómo lo vas a hacer?"></textarea>
-                            </div>
-                            <div class="pt-3 d-grid gap-2">
-                                <button id="saveTask" type="submit" class="btn btn-dark">
-                                    Recordar
-                                </button>
-                            </div>
-                        </form>
+        <div id="container-tasks">
+            <div class="container bg-light">
+                <h1 class="navbar-brand pt-5">A ver, <span class="text-dark bg-warning">Gabo</span>. ¿Pinta que te ordenes?</h1>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <form id="formTask">
+                                <div class="form-group">
+                                    <input type="text" id="title" placeholder="¿Qué tenés que hacer?" class="form-control ">
+                                </div>
+                                <div class="form-group pt-3">
+                                    <textarea id="description" cols="80" rows="8" style="resize: none;" class="form-control" placeholder="¿Cómo lo vas a hacer?"></textarea>
+                                </div>
+                                <div class="pt-3 d-grid gap-2">
+                                    <button id="saveTask" type="submit" class="btn btn-dark">
+                                        Recordar
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-8">
-                <div id="tasks"></div>
+                <div class="col-md-8">
+                    <div id="tasks"></div>
+                </div>
             </div>
         </div>
-        <div class="pt-5">
-            <div class="row mx-md-n5">
-                <div class="col px-md-0">
-                    <h2 class="navbar-brand pb-3">Proyectos <span class="text-dark bg-warning">importantes<span></h2>
-                </div>
-                <div class="col px-md-5">
-                    
-                </div>
-            </div>        
-            <table class="table table-dark">
-                <thead>
-                  <tr>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Costo ($)</th>
-                    <th scope="col">¿Qué necesito?</th>
-                    <th scope="col">Fecha a realizarse</th>
-                  </tr>
-                </thead>
-                <tbody id="tbody">
-                </tbody>
-            </table>
+        <div id="container-table">
+            <div class="pt-5">
+                <div class="row mx-md-n5">
+                    <div class="col px-md-0">
+                        <h2 class="navbar-brand pb-3">Proyectos <span class="text-dark bg-warning">importantes<span></h2>
+                    </div>
+                    <div class="col px-md-5">  
+                    </div>
+                </div>        
+                <table class="table table-dark">
+                    <thead>
+                      <tr>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Costo ($)</th>
+                        <th scope="col">¿Qué necesito?</th>
+                        <th scope="col">Fecha a realizarse</th>
+                      </tr>
+                    </thead>
+                    <tbody id="tbody">
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     <script
