--- a/index.html
+++ b/index.html
@@ -34,54 +34,18 @@
     </div>
     <div id="app" class="container">
         <div id="presentacion">
-            <p class="text-center">¡Hola! terricola, en esta aplicación tu podrás aprender a organizarte. En la pestaña <strong>tareas</strong> podrás poner en orden tus obligaciones diarias o dejar también, algún recordatorio. Por otra parte, y como veras, en la pestaña <strong>ver proyectos</strong> tendrás una breve descripción de cuales son los proyectos mas importantes del desarrollador de esta app: <a class="link-ga" href="https://www.linkedin.com/in/gabriel-alberini/"><strong>Gabriel Alberini</strong></a>. Sin nada mas que decir, ¡que la disfrutes! 🚀</p>
         </div>
         <div id="container-tasks">
-            <div class="container bg-light">
-                <h1 class="navbar-brand pt-5">A ver, <span class="text-dark bg-warning">Gabo</span>. ¿Pinta que te ordenes?</h1>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <form id="formTask">
-                                <div class="form-group">
-                                    <input type="text" id="title" placeholder="¿Qué tenés que hacer?" class="form-control ">
-                                </div>
-                                <div class="form-group pt-3">
-                                    <textarea id="description" cols="80" rows="8" style="resize: none;" class="form-control" placeholder="¿Cómo lo vas a hacer?"></textarea>
-                                </div>
-                                <div class="pt-3 d-grid gap-2">
-                                    <button id="saveTask" type="submit" class="btn btn-dark">
-                                        Recordar
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-8">
-                    <div id="tasks"></div>
-                </div>
-            </div>
         </div>
         <div id="container-table">
             <div class="pt-5">
                 <div class="row mx-md-n5">
-                    <div class="col px-md-0">
-                        <h2 class="navbar-brand pb-3">Proyectos <span class="text-dark bg-warning">importantes<span></h2>
-                    </div>
+                    <div id="tableTitle" class="col px-md-0"></div>
                     <div class="col px-md-5">  
                     </div>
                 </div>        
-                <table class="table table-dark">
-                    <thead>
-                      <tr>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Costo ($)</th>
-                        <th scope="col">¿Qué necesito?</th>
-                        <th scope="col">Fecha a realizarse</th>
-                      </tr>
+                <table class="table">
+                    <thead id="thead">
                     </thead>
                     <tbody id="tbody">
                     </tbody>
