--- a/index.html
+++ b/index.html
@@ -35,7 +35,34 @@
     <div id="app" class="container">
         <div id="presentacion">
         </div>
-        <div id="container-tasks">
+        <div id="container-tasks" style="display: none;">
+            <div class="container bg-light">
+                <h1 class="navbar-brand pt-5">A ver, <span class="text-dark bg-warning">Gabo</span>. ¿Pinta que te ordenes?</h1>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <form id="formTask">
+                                <div class="form-group">
+                                    <input type="text" id="title" placeholder="¿Qué tenés que hacer?" class="form-control ">
+                                </div>
+                                <div class="form-group pt-3">
+                                    <textarea id="description" cols="80" rows="8" style="resize: none;" class="form-control" placeholder="¿Cómo lo vas a hacer?"></textarea>
+                                </div>
+                                <div class="pt-3 d-grid gap-2">
+                                    <button id="saveTask" type="submit" class="btn btn-dark">
+                                        Recordar
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div id="tasks"></div>
+                </div>
+            </div>
         </div>
         <div id="container-table">
             <div class="pt-5">
