--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-light">
-    <!-- LOGO -->
+    <main>
+        <!-- LOGO -->
     <svg viewBox="0 0 960 300">
         <symbol id="s-text">
             <text text-anchor="middle" x="50%" y="80%">GABOTECA</text>
@@ -34,6 +35,14 @@
     </div>
     <div id="app" class="container">
     </div>
+    </main>
+    <footer>
+        <div id="agradecimientos" class="form-row text-center pt-3">
+            <div class="col-12">
+                <p class="text-secondary">Hecho con 🤍 y un poco de 🧠</p>
+            </div>
+        </div>
+    </footer>
     <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
