--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Gaboteca</title>
     <link rel=icon href=https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15/svgs/solid/rocket.svg>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="container bg-light">
 <main>
@@ -29,13 +30,14 @@
         <div class="col-12">
             <p class="text-secondary">Proyecto realizado para el curso de <br>JavaScript en CoderHouse. ¿Qué deseas hacer?</p>
             <a id="botonHome" href="#/hello"><button type="button" class="btn btn-outline-primary m-3">Saludo 🖖</button></a>
-            <a id="botonProyectos" href="#/viewProjects"><button type="button" class="btn btn-outline-dark m-3">Ver proyectos</button></a>
+            <a id="botonProyectos" href="#/projects"><button type="button" class="btn btn-outline-dark m-3">Ver proyectos</button></a>
             <a id="botonSkills" href="#/skills"><button type="button" class="btn btn-outline-success m-3">Skills</button></a>
             <a id="botonTasks" href="#/contact"><button type="button" class="btn btn-outline-warning m-3">¡Conectarme contigo!</button></a>
         </div>
     </div>
-    <div id="app"></div>
-    
+    <div id="app">
+
+    </div>
     <div class="container bg-light">
         <h1 class="navbar-brand pt-5">A ver, <span class="text-dark bg-warning">Gabo</span>. ¿Pinta que te ordenes?</h1>
     </div>
@@ -63,25 +65,35 @@
             <div id="tasks"></div>
         </div>
     </div>
-    </div>
-    </div>
 </main>
-<footer>
+<footer class="pt-4 my-md-5 pt-md-2 border-top">
+    <div class="row">
+      <div class="col-12 col-md">
+        <small class="d-block mb-3 text-muted">&copy; 2021</small>
+      </div>
+      <div class="col-6 col-md">
+        <h5>También me puedes encontrar en:</h5>
+        <ul class="list-unstyled text-small">
+          <li></i><i class="ico-footer linkedin fab fa-linkedin-in"></i><a class="text-muted" href="https://www.linkedin.com/in/gabriel-alberini/">Linkedin</a></li>
+          <li></i><i class="ico-footer github fab fa-github"></i><a class="text-muted" href="https://github.com/GabrielAlberini"></i>GitHub</a></li>
+        </ul>
+      </div>
+    </div>
     <div id="agradecimientos" class="form-row text-center pt-3">
         <div class="col-12">
             <p class="text-secondary">Hecho con 🤍 para <a href="https://www.coderhouse.com/" target="_blank">Coder House</a></p>
         </div>
     </div>
-</footer>
+  </footer>
 <script
 src="https://code.jquery.com/jquery-3.6.0.min.js"
 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
 crossorigin="anonymous"></script>
 
-<script src="./annualProjects.js"></script>
-<script src="./views.js"></script>
-<script src="./spa.js"></script>   
-<script src="./app.js"></script>
+<script src="app/annualProjects.js"></script>
+<script src="app/views.js"></script>
+<script src="app/spa.js"></script>   
+<script src="app/app.js"></script>
 </body>
 </html>
 
